--- a/登录.html
+++ b/登录.html
@@ -100,6 +100,7 @@
             border-radius: 10px;
             color: #fff;
             font-size: 15px;
+	    cursor: pointer;
         }
     </style>
 </head>
