--- a/登录.html
+++ b/登录.html
@@ -107,7 +107,7 @@
 <body>
     <div class="header">
         <ul>
-            <li class="text"><a href="实践报告.html">首页</a></li>
+            <li class="text"><a href="index.html">首页</a></li>
             <li class="text"><a href="主体.html">要点</a></li>
             <li class="text"><a href="注册.html">注册</a></li>
             <li class="text"><a href="登录.html">登录</a></li>
