--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <section class="section-item">
     <div class="section-item__block" data-index="1"></div>
     <div class="section-item__text">
-      <div class="text-title"><a href="main.html" target="_blank">「课题讲解」</a></div>
+      <div class="text-title"><a href="主体.html" target="_blank">「课题讲解」</a></div>
       <div class="text-desc"><a href="">蒋昀松</a></div>
     </div>
   </section>
